--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div class="quiz-container">
+    <div class="quiz-container" id="quiz-container">
       <h1>Welcome to 'True or False?'</h1>
       <p>Press the button below to begin:</p>
       <button id="start-btn">Start Quiz</button>
