--- a/index.html
+++ b/index.html
@@ -13,23 +13,35 @@
       <button id="start-btn">Start Quiz</button>
     </div>
 
-<div id="quiz">
-  <h2 id="question"></h2>
-  <div class="buttons">
-  <button id="true-btn">True</button>
-  <button id="false-btn">False</button>
-  <button id="false2-btn">False</button>
-  </div>
-  <p id="progress"></p>
-</div>
+    <div id="quiz">
+      <h2 id="question"></h2>
+      <div class="buttons">
+        <button id="true-btn">True</button>
+        <button id="false-btn">False</button>
+        <button id="false2-btn">False</button>
+      </div>
+      <p id="progress"></p>
+    </div>
 
-<div id="results">
-  <p id="score"></p>
-  <div class="results">
-  <button id="restart-btn">Restart Quiz</button>
-  </div>  
-</div>
-
+    <div id="results">
+      <p id="score"></p>
+      <div class="table">
+      <table id="answers-table">
+        <thead>
+          <tr>
+            <th>Question</th>
+            <th>Your Answer</th>
+            <th>Correct Answer</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+      <div class="results">
+        <button id="restart-btn">Restart Quiz</button>
+      </div>  
+    </div>
 
     <script src="quiz.js"></script>
   </body>
